# isogeo-2-office

./: .coveragerc  .env.example  .gitignore  .travis.yml  ISSUE_TEMPLATE.md  IsogeoToOffice.py  OpenCatalog2excel.py  Pipfile  README.md  __main__.py  appveyor.yml  azure-pipelines.yml  build.ps1  bundle_isogeo2office.spec  bundle_version.txt  isogeo.py  isogeo2docx  isogeo2docx.py  isogeo2office.pro  isogeo2office.py  isogeo2office.sublime-project  isogeo2office.sublime-workspace  isogeo2xls.py  isogeo_api_sample_request_search_allIncludes.json  modele_template_Isogeo.docx  requirements.txt  requirements_32bits.txt  requirements_64bits.txt  requirements_dev.txt  resources.qrc  resources_rc.py  settings.ini  settings_TPL.ini  setup.cfg  setup2exe.py  setup2exe_oc2xls.py  template_Isogeo.docx  test_requests.py  test_xlsx.py  tests_coverage.ps1  (+4 more)
.circleci/: config.yml
_templates/: template_Isogeo.docx
_thumbnails/: thumbnails.xlsx
doc/: isogeo_api_sample_request_search.json  isogeo_api_sample_request_shares.json  word_templating.md
docs/: Isogeo2office_launcher.lnk  Makefile  build_docs.ps1  conf.py  dev_build.md  dev_settings.md  index.rst  make.bat
hooks/: hook-openpyxl.py
i18n/: IsogeoToOffice_en.ts  IsogeoToOffice_fr.qm  IsogeoToOffice_fr.ts  isogeo2office.pot  isogeo_search_form_en.ts  test.pot
input/: README.md
legacy/: isogeo2xls.py  setup2exe.py  test_xlsx.py
modules/: __init__.py  checknorris.py  isogeo2docx.py  isogeo2xls.py  isogeo2xlsx.py  isogeo_api_strings.py  isogeo_params.ini  isogeo_sdk.py  threads.py  ui_app_settings.py  utils.py
(+99 files in other folders)
