[metadata]
description-file = README.md

[tool:pytest]
# see: https://docs.pytest.org/en/latest/reference.html#ini-options-ref
addopts = --cov --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html --cov-append tests/ --ignore=tests/_wip/
minversion = 3.2
norecursedirs = .* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip
qt_api=pyqt5
testpaths = tests