[metadata]
description-file = README.md

[tool:pytest]
# see: https://docs.pytest.org/en/latest/reference.html#ini-options-ref
addopts = --junitxml=junit/test-results.xml --cov-config=.coveragerc --cov=isogeo2office --cov-report=xml --cov-report=html --cov-append tests/ --ignore=tests/_wip/
junit_family = xunit2
minversion = 5.3
norecursedirs = .* build dev development dist docs CVS fixtures _darcs {arch} *.egg venv _wip
qt_api=pyqt5
testpaths = tests
